@startuml

title __LOGIN_2TH's Class Diagram__\n

  namespace com.example.exam_reg {
    class com.example.exam_reg.BuildConfig {
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.HomeActivity {
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.MainActivity {
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.RegisterActivity {
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.WelcomeActivity {
    }
  }
  

  com.example.exam_reg.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.RegisterActivity .up.|> android.view.View.OnClickListener
  com.example.exam_reg.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.WelcomeActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
